--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ astroid~=2.0.4
 autopep8~=1.4.2
 Django~=2.1.3
 django-bootstrap-modal-forms~=1.3.1
+django-filter~=2.0.0
 django-widget-tweaks~=1.4.3
 isort~=4.3.4
 lazy-object-proxy~=1.3.1
